--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
 					<h3>Navigation</h3>
 					<ul>
 						<li><a class="selected" href="">Home</li>
-						<li><a href="project.html">Project</li>
+						<li><a href="">Project</li>
 						<li><a href="">About</li>
 					</ul>
 				</div>
 
 				<div id="main">
-					<h2>Home Page</h2>
+					<h2>About Page</h2>
 					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
 					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
 					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
