--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-						<li><a class="selected" href="">Home</li>
-						<li><a href="">Project</li>
-						<li><a href="">About</li>
+            <li><a class="selected" href="index.html">Home</li>
+						<li><a href="project.html">Project</li>
+						<li><a href="about.html">About</li>
 					</ul>
 				</div>
 
