--- a/3dd.html
+++ b/3dd.html
@@ -12,15 +12,14 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-						<li><a class="selected" href="index.html">Home</a></li>
+            <li><a class="selected" href="index.html">Home</a></li>
 						<li><a href="project.html">Project</a></li>
 						<li><a href="about.html">About</a></li>
 					</ul>
 				</div>
 
 				<div id="main">
-					<h2>Home Page</h2>
-					<p>Welcome to my Webpage. This webpage is a documentation of my projects, experiences, skills-learnt, mistakes made, new technical products</p>
+					<h2>3D Design</h2>
 
 				</div>
 			</div>
