--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-            <li><a class="selected" href="index.html">Home</li>
-						<li><a href="project.html">Project</li>
-						<li><a href="about.html">About</li>
+            <li><a class="selected" href="index.html">Home</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="about.html">About</a></li>
 					</ul>
 				</div>
 
 				<div id="main">
-					<h2>About Page</h2>
+					<h2>About Me</h2>
 					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
 					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
 					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
