--- a/project.html
+++ b/project.html
@@ -12,23 +12,20 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-            <li><a class="selected" href="index.html">Home</li>
-						<li><a href="project.html">Project</li>
-						<li><a href="about.html">About</li>
+            <li><a class="selected" href="index.html">Home</a></li>
+						<li><a href="project.html">Project</a></li>
+						<li><a href="about.html">About</a></li>
 					</ul>
 				</div>
 
 				<div id="main">
-					<h2>Project Page</h2>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwi</p>
+					<h2>Projects</h2>
+          <h3><a href="webdes.html">Web Design</a></h3>
+          <p>HTML, CSS, GitHub, Git and etc.</p>
+          <h3><a href="3dd.html">3D Design</a></h3>
+          <p>Fusion 360.</p>
+
+
 				</div>
 			</div>
 			<div id="footer">
