--- a/Main/index.html
+++ b/Main/index.html
@@ -13,8 +13,8 @@
 					<h3>Navigation</h3>
 					<ul>
 						<li><a class="selected" href="index.html">Home</a></li>
-						<li><a href="project.html">Project</a></li>
-						<li><a href="about.html">About</a></li>
+						<li><a href="project/project.html">Projects</a></li>
+						<li><a href="about/about.html">About Me</a></li>
 					</ul>
 				</div>
 
