--- a/Main/project/project.html
+++ b/Main/project/project.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>My website</title>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="../style.css" />
 	</head>
 	<body>
 		<div id="container">
@@ -12,9 +12,9 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-            <li><a class="selected" href="index.html">Home</a></li>
+            <li><a class="selected" href="../index.html">Home</a></li>
 						<li><a href="project.html">Projects</a></li>
-						<li><a href="about.html">About Me</a></li>
+						<li><a href="../about/about.html">About Me</a></li>
 					</ul>
 				</div>
 
