--- a/project/webdes.html
+++ b/project/webdes.html
@@ -44,6 +44,8 @@
 					<h3>Github Deskstop</h3>
 					<p>Github Deskstop is a simpler version of git which allows me to interact with GitHub from the desktop. There is no codes needed to
 					input as to interact with github.</p>
+					<img src="gitdesk.bmp" alt="gitdesk" style="width:780px;height:520px;">
+					<p>The image above shows an example of commiting file changes to github.</p>
 
 
 				</div>
