--- a/about/about.html
+++ b/about/about.html
@@ -20,15 +20,10 @@
 
 				<div id="main">
 					<h2>About Me</h2>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa</p>
-					<p>lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwa
-					 lorem siadoinad audu aduu wbdua wdbawiu diawduia dbwuaidb auibduiabd iawbdui waibdwi</p>
+					<h3>Hi, I am Nur Irsyad!</h3>
+					<p>I am currently a student at Singapore Polytechnic. My course in SP is Mechanical Engineering.</p>
+					<p>My hobbies are to read books such as to kill the mockingbird, the curious incident of the dog in the night-time and etc.
+					I also like to spend my time studying and revising for my lessons.</p>
 				</div>
 			</div>
 			<div id="footer">
