--- a/about/about.html
+++ b/about/about.html
@@ -19,12 +19,17 @@
 				</div>
 
 				<div id="main">
+
 					<h2>About Me</h2>
 					<h3>Hi, I am Nur Irsyad!</h3>
 					<p>I am currently a student at Singapore Polytechnic. My course in SP is Mechanical Engineering.</p>
 					<p>My hobbies are to read books such as to kill the mockingbird, the curious incident of the dog in the night-time and etc.
 					I also like to spend my time studying and revising for my lessons.</p>
+					<h3>Contact</h3>
+					<p>Email: NIBA.20@ichat.sp.edu.sg</p>
+
 				</div>
+
 			</div>
 			<div id="footer">
 				Copyright &copy; 2021 Nur Irsyad.
