--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<div id="main">
 					<h2>Home Page</h2>
-					<p>Welcome to my Webpage. This webpage is a documentation of my projects, experiences, skills-learnt, mistakes made, new technical products</p>
+					<p>Welcome to my Webpage. This webpage is a documentation of my projects, experiences, skills-learnt, mistakes made, new technical products.</p>
 
 				</div>
 			</div>
