--- a/project/webdes.html
+++ b/project/webdes.html
@@ -12,9 +12,9 @@
 				<div id="nav">
 					<h3>Navigation</h3>
 					<ul>
-            <li><a class="selected" href="../index.html">Home</a></li>
-						<li><a href="../project/project.html">Project</a></li>
-						<li><a href="../about/about.html">About</a></li>
+						<li><a class="selected" href="../index.html">Home</a></li>
+						<li><a href="../project/project.html">Projects</a></li>
+						<li><a href="../about/about.html">About Me</a></li>
 					</ul>
 				</div>
 
@@ -34,7 +34,7 @@
           <h3>GitHub</h3>
           <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from
              anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and Pull Requests.</p>
-             <img src="github.bmp" alt="github" style="width:780px;height:390px;">
+						 <img src="github.bmp" alt="github" style="width:780px;height:390px;">
           <p>The image above shows an example of my github repositories which includes all my files to create a website.</p>
 
 					<h3>Git</h3>
