--- a/project/3dd.html
+++ b/project/3dd.html
@@ -24,13 +24,13 @@
 					<p>Autodesk Fusion 360 which is a Computer-Aided Design Software.</p>
 					<h3>Nametag Model</h3>
 					<p>Step 1: Create Sketch ot the part.</p>
-					<img src="3dsketch.bmp" alt="3dsketch" style="width:780px;height:450px;">
+					<img src="../images/3dsketch.bmp" alt="3dsketch" style="width:780px;height:450px;">
 					<p>Step 2: Extrude the layers required to create the 3D shape.</p>
-					<img src="3dmodel.bmp" alt="3dmodel" style="width:780px;height:450px;">
+					<img src="../images/3dmodel.bmp" alt="3dmodel" style="width:780px;height:450px;">
 					<p>Step 3: Save file as .stl and place in Ultimaker Cura to print.</p>
-					<img src="3dprint.bmp" alt="3dprint" style="width:780px;height:450px;">
+					<img src="../images/3dprint.bmp" alt="3dprint" style="width:780px;height:450px;">
 					<p>The end product should look like the one in the image below.</p>
-					<img src="finpa.bmp" alt="finpa" style="width:780px;height:370px;">
+					<img src="../images/finpa.bmp" alt="finpa" style="width:780px;height:370px;">
 					<p></p>
 
 
