--- a/project/webdes.html
+++ b/project/webdes.html
@@ -34,7 +34,7 @@
           <h3>GitHub</h3>
           <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from
              anywhere. This tutorial teaches you GitHub essentials like repositories, branches, commits, and Pull Requests.</p>
-						 <img src="github.bmp" alt="github" style="width:780px;height:390px;">
+						 <img src="../images/github.bmp" alt="github" style="width:780px;height:390px;">
           <p>The image above shows an example of my github repositories which includes all my files to create a website.</p>
 
 					<h3>Git</h3>
@@ -44,7 +44,7 @@
 					<h3>Github Deskstop</h3>
 					<p>Github Deskstop is a simpler version of git which allows me to interact with GitHub from the desktop. There is no codes needed to
 					input as to interact with github.</p>
-					<img src="gitdesk.bmp" alt="gitdesk" style="width:780px;height:520px;">
+					<img src="../images/gitdesk.bmp" alt="gitdesk" style="width:780px;height:520px;">
 					<p>The image above shows an example of commiting file changes to github.</p>
 
 
