--- a/project/project.html
+++ b/project/project.html
@@ -23,7 +23,7 @@
           <h3><a href="webdes.html">Web Design</a></h3>
           <p>HTML, CSS, GitHub, Git and etc.</p>
           <h3><a href="3dd.html">3D Design</a></h3>
-          <p>Fusion 360.</p>
+          <p>Fusion 360 and Ultimaker Cura.</p>
 
 				</div>
 			</div>
